# QTunes

./: .gitignore  CMakeLists.txt  Connection.qml  ListDelegate.qml  ListsDelegate.qml  QTunes.pro  QTunes.qml  QTunesForm.ui.qml  README.md  albummodel.cpp  albummodel.h  artistmodel.cpp  artistmodel.h  compile_commands.json  controller.cpp  controller.h  listmodel.cpp  listmodel.h  main.qml  panemodel.cpp  playlistmodel.cpp  playlistmodel.h  qml.qrc  qtunes.cpp  qtunes.qml  queuemodel.cpp  queuemodel.h  songmodel.cpp  songmodel.h  tst_testcontroller.cpp
Controller/: CMakeLists.txt  abstractitem.h  controller.cpp  controller.h  tagitem.cpp  tagitem.h
QTunes/: CMakeLists.txt  ListDelegate.qml  controller.bak.h  main.qml  panemodel.cpp  panemodel.h  qml.qrc  qtunes.cpp
qtunes/: CMakeLists.txt  ListDelegate.qml
src/: ListDelegate.qml  abstracthostinfo.cpp  abstracthostinfo.h  abstractitem.h  abstractmpdconnection.cpp  abstractmpdconnection.h  abstractmpdconnectionfactory.cpp  abstractmpdconnectionfactory.h  abstractmpdsettings.cpp  abstractmpdsettings.h  abstractmpdsettingsfactory.cpp  abstractmpdsettingsfactory.h  abstractmpdsong.cpp  abstractmpdsong.h  connectionmanager.cpp  controller.cpp  controller.h  enums.h  hostinfo.cpp  hostinfo.h  itemmodelcontroller.cpp  itemmodelcontroller.h  itemmodeldata.cpp  itemmodeldata.h  main.cpp  main.qml  mockmpdsettings.cpp  mockmpdsettings.h  model.cpp  model.h  mpdconnection.cpp  mpdconnection.h  mpdconnectionfactory.cpp  mpdconnectionfactory.h  mpdsettings.cpp  mpdsettings.h  mpdsettingsfactory.cpp  mpdsettingsfactory.h  mpdsong.cpp  mpdsong.h  (+12 more)
tests/: CMakeLists.txt  mockhostinfo.cpp  mockhostinfo.h  mockmpdconnection.cpp  mockmpdconnection.h  mockmpdconnectionfactory.cpp  mockmpdconnectionfactory.h  mockmpdsettings.cpp  mockmpdsettings.h  mockmpdsettingsfactory.cpp  mockmpdsettingsfactory.h  tests.pro  tst_testconnection.cpp  tst_testcontroller.cpp  tst_testpresenter.cpp  tst_testviewmodel.cpp
